# money-ihaskell

./: LICENSE  default.nix  money-ihaskell.cabal  money.cabal  stack.yaml
app/: Main.hs
src/: Money.hs  Util.hs
src/Money/: Balance.hs  DB.hs  FilterSort.hs  IHaskell.hs  Lens.hs  Plaid.hs  Prediction.hs  Recurring.hs
src/Money/DB/: Types.hs
src/MoneySyncService/: Client.hs
