name:                money-ihaskell
version:             0.1.0.0
-- synopsis:
-- description:
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Money.Prediction
                     , Money.FilterSort
                     , Money.Balance
                     , Money.IHaskell
                     , Money.Recurring
                     , MoneySyncService.Client
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , base64-bytestring
                     , blaze-html
                     , bytestring
                     , case-insensitive
                     , cereal
                     , containers
                     , cryptonite
                     , directory
                     , http-api-data
                     , http-client
                     , http-client-tls
                     , lens
                     , money-sync-service
                     , memory
                     , protolude
                     , regex-posix
                     , safecopy
                     , servant
                     , servant-client
                     , text
                     , time
                     , unix
  ghc-options:         -Wunused-imports -Wname-shadowing
  default-language:    Haskell2010
